# robotiq

./: CMakeLists.txt  package.xml
meshes/collision/: robotiq_arg2f_85_inner_finger.dae  robotiq_arg2f_85_inner_knuckle.dae  robotiq_arg2f_85_outer_finger.dae  robotiq_arg2f_85_outer_knuckle.dae  robotiq_gripper_coupling.stl
urdf/: robotiq_arg2f.xacro  robotiq_arg2f_85_model.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
